--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CSS Fundamentals</title>
 
     <!-- Un-comment the following line to see what the document looks like with the CSS Reset applied -->
-    <!-- <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"> -->
+  <!-- <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"> -->
 
     <!-- Un-comment the following line to see wht the document looks like with Normalize applied -->
     <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css"> -->
@@ -16,7 +16,15 @@
 
     <style>
       /* Put your styles here to get started */
-
+      body {
+        font-size: 30px;
+      }
+      h1,h2 {
+        font-family: "verdana";
+      }
+      header {
+        border: 10px solid red; 
+      }
       /*
         After you've finished the "Tag Selectors" exercises, move your styles
         into the 'styles.css' file and replace this <style> tag and its contents
