Class, ID and Advance Selectors exercises

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>CSS Fundamentals</title>
 
     <!-- Un-comment the following line to see what the document looks like with the CSS Reset applied -->
@@ -14,23 +15,6 @@
 
     <!-- Re-comment both of the above <link> tags once you've seen their effect -->
 
-    <style>
-      /* Put your styles here to get started */
-      body {
-        font-size: 30px;
-      }
-      h1,h2 {
-        font-family: "verdana";
-      }
-      header {
-        border: 10px solid red; 
-      }
-      /*
-        After you've finished the "Tag Selectors" exercises, move your styles
-        into the 'styles.css' file and replace this <style> tag and its contents
-        with a <link> tag that refers to 'styles.css'
-      */
-    </style>
   </head>
   <body>
     <header>
